# jrtp-ffmpeg-camera

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/wmy/jni/com/githubrtp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/geek/vortex/: MainActivity.java  NativeFFMPEGMethod.java
app/src/main/java/wmy/jni/com/githubrtp/: MainActivity.java  NativeFFMPEGMethod.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/wmy/jni/com/githubrtp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
